--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
 
 html, body { height: 100%; }
+
 body { 
   margin: 0; 
   font-family: Roboto, "Helvetica Neue", sans-serif;
-  // background: #373737;
+}
+
+.container {
+  max-width: 500px;
+  margin: 0 auto;
+  padding: 0 20px;
 }
