--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -1,9 +1,7 @@
 <div class="display-options">
   <mat-form-field>
     <mat-select [formControl]="ticker">
-      <mat-option *ngFor="let t of tickers" [value]="t">
-        {{t}}
-      </mat-option>
+      <mat-option *ngFor="let t of tickers" [value]="t">{{t}}</mat-option>
     </mat-select>
   </mat-form-field>
 
@@ -21,8 +19,5 @@
   [constructorType]="'stockChart'"
   [callbackFunction]="saveChartInstance"
 
-
   style="width: 100%; height: 600px; display: block;"
 ></highcharts-chart>
-
-<button (click)="updateOptions()">Update Options</button>
